--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,20 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==24.2.0
+beautifulsoup4==4.12.3
 charset-normalizer==3.3.2
+click==8.1.7
 einops==0.8.0
 frozenlist==1.5.0
 fsspec==2024.10.0
+gdown==5.2.0
 grpcio==1.67.0
 httplib2==0.22.0
 lightning==2.4.0
 lightning-utilities==0.11.8
 Markdown==3.7
+markdown-it-py==3.0.0
+mdurl==0.1.2
 mkl-service==2.4.0
 multidict==6.1.0
 numpy==1.26.4
@@ -23,15 +28,19 @@ protobuf==5.28.3
 py-cpuinfo==9.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+Pygments==2.18.0
 pyparsing==3.2.0
 PySide6==6.7.2
 PySide6_Addons==6.7.2
 PySide6_Essentials==6.7.2
 pytorch-lightning==2.4.0
 requests==2.32.3
+rich==13.9.3
 rsa==4.9
+shellingham==1.5.4
 shiboken6==6.7.2
 six==1.16.0
+soupsieve==2.6
 sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
@@ -41,5 +50,6 @@ torchmetrics==1.5.1
 torchvision==0.20.0
 tqdm==4.66.5
 triton==3.1.0
+typer==0.12.5
 Werkzeug==3.0.6
 yarl==1.16.0
