--- a/environment.yml
+++ b/environment.yml
@@ -108,27 +108,38 @@ dependencies:
       - aiosignal==1.3.1
       - async-timeout==4.0.3
       - attrs==24.2.0
+      - beautifulsoup4==4.12.3
+      - click==8.1.7
       - einops==0.8.0
       - frozenlist==1.5.0
       - fsspec==2024.10.0
+      - gdown==5.2.0
       - grpcio==1.67.0
       - httplib2==0.22.0
+      - kagglehub==0.3.3
       - lightning==2.4.0
       - lightning-utilities==0.11.8
       - markdown==3.7
+      - markdown-it-py==3.0.0
+      - mdurl==0.1.2
       - multidict==6.1.0
       - numpy==1.26.4
       - packaging==24.1
       - propcache==0.2.0
       - protobuf==5.28.3
+      - pygments==2.18.0
       - pyparsing==3.2.0
       - pytorch-lightning==2.4.0
+      - rich==13.9.3
+      - shellingham==1.5.4
       - six==1.16.0
+      - soupsieve==2.6
       - sympy==1.13.1
       - tensorboard==2.18.0
       - tensorboard-data-server==0.7.2
       - torchmetrics==1.5.1
       - tqdm==4.66.5
+      - typer==0.12.5
       - werkzeug==3.0.6
       - yarl==1.16.0
 prefix: /home/essam/anaconda3/envs/image-generation-finetuning
