--- a/requirements.txt
+++ b/requirements.txt
@@ -5,24 +5,36 @@ aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
+Brotli 
+certifi 
 charset-normalizer==3.3.2
 click==8.1.7
 einops==0.8.0
+filelock 
 frozenlist==1.5.0
 fsspec==2024.10.0
 gdown==5.2.0
+gmpy2 
 grpcio==1.67.0
 httplib2==0.22.0
+idna
+Jinja2 
+kagglehub==0.3.3
 lightning==2.4.0
 lightning-utilities==0.11.8
 Markdown==3.7
 markdown-it-py==3.0.0
-mdurl==0.1.2
+MarkupSafe 
 mkl-service==2.4.0
+mkl_fft 
+mkl_random 
+mpmath 
 multidict==6.1.0
+networkx 
 numpy==1.26.4
 oauth2client==4.1.3
 packaging==24.1
+pillow 
 propcache==0.2.0
 protobuf==5.28.3
 py-cpuinfo==9.0.0
@@ -33,7 +45,9 @@ pyparsing==3.2.0
 PySide6==6.7.2
 PySide6_Addons==6.7.2
 PySide6_Essentials==6.7.2
+PySocks 
 pytorch-lightning==2.4.0
+PyYAML 
 requests==2.32.3
 rich==13.9.3
 rsa==4.9
@@ -51,5 +65,7 @@ torchvision==0.20.0
 tqdm==4.66.5
 triton==3.1.0
 typer==0.12.5
+typing_extensions 
+urllib3 
 Werkzeug==3.0.6
 yarl==1.16.0
