--- a/requirements.txt
+++ b/requirements.txt
@@ -2,57 +2,54 @@ absl-py==2.1.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
+annotated-types==0.7.0
 async-timeout==4.0.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
-Brotli 
-certifi 
+Brotli==1.0.9
+certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 einops==0.8.0
-filelock 
+filelock==3.13.1
 frozenlist==1.5.0
 fsspec==2024.10.0
 gdown==5.2.0
-gmpy2 
+gmpy2==2.1.2
 grpcio==1.67.0
 httplib2==0.22.0
-idna
-Jinja2 
+idna==3.7
+Jinja2==3.1.4
 kagglehub==0.3.3
 lightning==2.4.0
 lightning-utilities==0.11.8
 Markdown==3.7
 markdown-it-py==3.0.0
-MarkupSafe 
+MarkupSafe==2.1.3
+mdurl==0.1.2
+mkl_fft==1.3.10
+mkl_random==1.2.7
 mkl-service==2.4.0
-mkl_fft 
-mkl_random 
-mpmath 
+mpmath==1.3.0
 multidict==6.1.0
-networkx 
+networkx==3.2.1
 numpy==1.26.4
-oauth2client==4.1.3
 packaging==24.1
-pillow 
+pillow==10.4.0
+pip==24.3.1
 propcache==0.2.0
 protobuf==5.28.3
-py-cpuinfo==9.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
+pydantic==2.10.3
+pydantic_core==2.27.1
 Pygments==2.18.0
 pyparsing==3.2.0
-PySide6==6.7.2
-PySide6_Addons==6.7.2
-PySide6_Essentials==6.7.2
-PySocks 
+PySocks==1.7.1
 pytorch-lightning==2.4.0
-PyYAML 
+PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.3
-rsa==4.9
+setuptools==75.1.0
 shellingham==1.5.4
-shiboken6==6.7.2
 six==1.16.0
 soupsieve==2.6
 sympy==1.13.1
@@ -65,7 +62,8 @@ torchvision==0.20.0
 tqdm==4.66.5
 triton==3.1.0
 typer==0.12.5
-typing_extensions 
-urllib3 
+typing_extensions==4.12.2
+urllib3==2.2.3
 Werkzeug==3.0.6
+wheel==0.44.0
 yarl==1.16.0
